Added a link to the doc.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-My GitHub Page
+<html>
+	<head>
+		<title>PyAlgoTrade</title>
+	</head>
+	<body>
+		<a href="doc/html">PyAlgoTrade documentation</a>
+	</body>
+</html>
+
