Added package to download and install.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 		<title>PyAlgoTrade</title>
 	</head>
 	<body>
-		<a href="doc/html">PyAlgoTrade documentation</a>
+		<h1>Docs</h1>
+		<a href="doc/html">Documentation</a>
+
+		<h1>Downloads</h1>
+		<a href="downloads/PyAlgoTrade-0.1.tar.gz">PyAlgoTrade-0.1.tar.gz</a>
 	</body>
 </html>
 
