--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 		<h1>Downloads</h1>
 		<a href="downloads/PyAlgoTrade-0.1.tar.gz">PyAlgoTrade-0.1.tar.gz</a>
+
+		<h1>Source</h1>
+		<a href="https://github.com/gbeced/pyalgotrade">PyAlgoTrade source code browser</a>
 	</body>
 </html>
 
