--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ The two main goals are:
 </p>
 
 <p>
-The fastest way to get an idea of what is this about, would be to take a look at the <a href="/docs/v0.1/html/tutorial.html">tutorial</a>.
-The complete documentation is located <a href="/docs/v0.1/html/index.html">here</a>.
+The fastest way to get an idea of what is this about, would be to take a look at the <a href="http://gbeced.github.com/pyalgotrade/docs/v0.1/html/tutorial.html">tutorial</a>.
+The complete documentation is located <a href="http://gbeced.github.com/pyalgotrade/docs/v0.1/html/index.html">here</a>.
 </p>
 
 <p>
