--- a/dowloads/index.html
+++ b/dowloads/index.html
@@ -55,7 +55,7 @@
 		<div id="contentContainer">
 			<div id="content">
 				<p>
-Current version: <a href="/releases/PyAlgoTrade-0.1.tar.gz">PyAlgoTrade-0.1.tar.gz</a>
+Current version: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.1.tar.gz">PyAlgoTrade-0.1.tar.gz</a>
 </p>
 
 			</div>
