--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<h1>PyAlgoTrade</h1>
 			<h2>Python Algorithmic Trading Library</h2>
 		</div>
-		<div id="navcontainer"><ul><li><a href="index.html" rel="self" id="current">Home</a></li><li><a href="dowloads/index.html" rel="self">Dowloads</a></li></ul></div>
+		<div id="navcontainer"><ul><li><a href="index.html" rel="self" id="current">Home</a></li><li><a href="downloads/index.html" rel="self">Downloads</a></li></ul></div>
 	</div>
 	<div id="headerBottomGrad">
 		<img src="rw_common/themes/realmacsoftware06/images/bottom_grad.png" alt="" style="width: 3000px; height: 12px;" />
