--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		
 		<div id="contentContainer">
 			<div id="content">
-				<p>
+<p>
 PyAlgoTrade is a free and open source Python library for <b>backtesting</b> stock trading strategies. 
 </p>
 
@@ -69,12 +69,12 @@ The two main goals are:
 </p>
 
 <p>
-The fastest way to get an idea of what is this about, would be to take a look at the <a href="http://gbeced.github.com/pyalgotrade/docs/v0.1/html/tutorial.html">tutorial</a>.
+The best way to get an idea of what is this about, would be to take a look at the <a href="http://gbeced.github.com/pyalgotrade/docs/v0.1/html/tutorial.html">tutorial</a>.
 The complete documentation is located <a href="http://gbeced.github.com/pyalgotrade/docs/v0.1/html/index.html">here</a>.
 </p>
 
 <p>
-It is licensed under the Apache License, Version 2.0.
+It is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.
 </p>
 			</div>
 			<div class="clearer"></div>
