--- a/index.html
+++ b/index.html
@@ -74,24 +74,24 @@
 		<div id="contentContainer">
 			<div id="content">
 <p>
-PyAlgoTrade is a free and open source Python library for <b>backtesting</b> stock trading strategies. 
+PyAlgoTrade is Python library for <b>backtesting</b> stock trading strategies. 
 </p>
 
 <p>
 The two main goals are:
 <ul>
-  <li>To be able to easily write and backstest a strategy with historical data.</li>
+  <li>To make it easy to write and backtest a strategy with historical data.</li>
   <li>To make it easy to scale horizontally, that is, using one or more computers to backtest a strategy.</li>
 </ul>
 </p>
 
 <p>
-The best way to get an idea of what is this about, would be to take a look at the <a href="http://gbeced.github.com/pyalgotrade/docs/v0.1/html/tutorial.html">tutorial</a>.
+The best way to get an idea of what is this about, is to take a look at the <a href="http://gbeced.github.com/pyalgotrade/docs/v0.1/html/tutorial.html">tutorial</a>.
 The complete documentation is located <a href="http://gbeced.github.com/pyalgotrade/docs/v0.1/html/index.html">here</a>.
 </p>
 
 <p>
-It is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.
+PyAlgoTrade is a free, open source, and it is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.
 </p>
 			</div>
 			<div class="clearer"></div>
