--- a/downloads/index.html
+++ b/downloads/index.html
@@ -6,7 +6,7 @@
 		
 		<title>PyAlgoTrade | Downloads</title>
 		<link rel="stylesheet" type="text/css" media="screen" href="../rw_common/themes/realmacsoftware06/styles.css"  />
-		<link rel="stylesheet" type="text/css" media="screen" href="../rw_common/themes/realmacsoftware06/colourtag-theme-default.css"  />
+		<link rel="stylesheet" type="text/css" media="screen" href="../rw_common/themes/realmacsoftware06/colourtag.css"  />
 		<!--[if IE 6]><link rel="stylesheet" type="text/css" media="screen" href="../rw_common/themes/realmacsoftware06/ie6.css"  /><![endif]-->
 		<!--[if IE 7]><link rel="stylesheet" type="text/css" media="screen" href="../rw_common/themes/realmacsoftware06/ie7.css"  /><![endif]-->
 		<link rel="stylesheet" type="text/css" media="screen" href="../rw_common/themes/realmacsoftware06/css/width/900.css" />
@@ -17,7 +17,23 @@
 		
 		
 		
-		
+		<!-- Google analytics -->
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-1180709-11']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+	var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
+<!-- Plus One Button -->
+<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 		<!--[if IE 6]><script type="text/javascript" charset="utf-8">
 			var blankSrc = "../rw_common/themes/realmacsoftware06/png/blank.gif";
 		</script>	
@@ -28,23 +44,6 @@
 			}
 		
 		</style><![endif]-->
-
-		<!-- Google analytics -->
-		<script type="text/javascript">
-
-		  var _gaq = _gaq || [];
-		  _gaq.push(['_setAccount', 'UA-1180709-11']);
-		  _gaq.push(['_trackPageview']);
-
-		  (function() {
-			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		  })();
-
-		</script>
-		<!-- End Google analytics -->
-
 	</head>
 <body>
 	<div id="topbar"></div>
@@ -64,7 +63,8 @@
 		<div id="sidebarContainer">
 			<div id="sidebar">
 				<h1 class="sideHeader"></h1>
-				
+				<!-- Plus One Button -->
+<g:plusone size="medium"></g:plusone>
 				
 			</div>
 		</div>
@@ -74,7 +74,6 @@
 				<p>
 Current version: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.1.tar.gz">PyAlgoTrade-0.1.tar.gz</a>
 </p>
-
 			</div>
 			<div class="clearer"></div>
 			<div id="breadcrumbcontainer"></div>
