--- a/downloads/index.html
+++ b/downloads/index.html
@@ -72,8 +72,10 @@
 		<div id="contentContainer">
 			<div id="content">
 				<p>
-Current version: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.1.tar.gz">PyAlgoTrade-0.1.tar.gz</a>
-</p>
+				Current version: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.2.tar.gz">PyAlgoTrade-0.2.tar.gz</a>
+				<br />
+				Version 0.1: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.1.tar.gz">PyAlgoTrade-0.1.tar.gz</a>
+				</p>
 			</div>
 			<div class="clearer"></div>
 			<div id="breadcrumbcontainer"></div>
