Updated download page.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div id="contentContainer">
 			<div id="content">
 				<p>
-PyAlgoTrade is Python library for <b>backtesting</b> stock trading strategies. 
+PyAlgoTrade is <b>Python</b> library for <b>backtesting</b> stock trading strategies. 
 </p>
 
 <p>
