--- a/downloads/index.html
+++ b/downloads/index.html
@@ -71,11 +71,18 @@
 		
 		<div id="contentContainer">
 			<div id="content">
-				<p>
-				Current version: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.2.tar.gz">PyAlgoTrade-0.2.tar.gz</a>
-				<br />
-				Version 0.1: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.1.tar.gz">PyAlgoTrade-0.1.tar.gz</a>
-				</p>
+				<h2>Current version: 0.2</h2>
+Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.2.tar.gz">PyAlgoTrade-0.2.tar.gz</a>
+<ul>
+  <li>Added CrossAbove and CrossBelow technical indicators.</li>
+  <li>Added support for limit orders.</li>
+  <li>Fixed a bug when a position was set to exit on session close but the entry order was not filled.</li>
+</ul>
+
+<h2>Previous versions</h2>
+<ul>
+  <li>Version 0.1: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.1.tar.gz">PyAlgoTrade-0.1.tar.gz</a></li>
+</ul>
 			</div>
 			<div class="clearer"></div>
 			<div id="breadcrumbcontainer"></div>
