Updating to version 0.3.

--- a/index.html
+++ b/index.html
@@ -85,9 +85,18 @@ The two main goals are:
 </p>
 
 <p>
-The best way to get an idea of what is this about, is to take a look at the <a href="http://gbeced.github.com/pyalgotrade/docs/v0.2/html/tutorial.html">tutorial</a>.
-The complete documentation is located <a href="http://gbeced.github.com/pyalgotrade/docs/v0.2/html/index.html">here</a>.
+The best way to get an idea of what is this about, is to take a look at the <a href="http://gbeced.github.com/pyalgotrade/docs/v0.3/html/tutorial.html">tutorial</a>.
+The complete documentation is located <a href="http://gbeced.github.com/pyalgotrade/docs/v0.3/html/index.html">here</a>.
 </p>
+
+<br />
+
+<p>
+It is also very easy to get a plot of the strategy execution. It only takes 3 lines of code to get a plot like this:
+<img src="resources/tutorial-5.png"></img>
+</p>
+
+<br />
 
 <p>
 PyAlgoTrade is a free, open source, and it is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.
