--- a/downloads/index.html
+++ b/downloads/index.html
@@ -71,7 +71,13 @@
 		
 		<div id="contentContainer">
 			<div id="content">
-				<h2>Current version: 0.2</h2>
+				<h2>Current version: 0.3</h2>
+Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.3.tar.gz">PyAlgoTrade-0.3.tar.gz</a>
+<ul>
+  <li>Support for plotting strategies (StrategyPlotter).</li>
+</ul>
+
+<h2>Version 0.2</h2>
 Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.2.tar.gz">PyAlgoTrade-0.2.tar.gz</a>
 <ul>
   <li>Added CrossAbove and CrossBelow technical indicators.</li>
@@ -79,10 +85,8 @@ Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrad
   <li>Fixed a bug when a position was set to exit on session close but the entry order was not filled.</li>
 </ul>
 
-<h2>Previous versions</h2>
-<ul>
-  <li>Version 0.1: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.1.tar.gz">PyAlgoTrade-0.1.tar.gz</a></li>
-</ul>
+<h2>Version 0.1</h2>
+Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.1.tar.gz">PyAlgoTrade-0.1.tar.gz</a>
 			</div>
 			<div class="clearer"></div>
 			<div id="breadcrumbcontainer"></div>
