--- a/www/PyAlgoTrade.rwsw/Pages/2-Downloads/Data/Contents.html
+++ b/www/PyAlgoTrade.rwsw/Pages/2-Downloads/Data/Contents.html
@@ -1,4 +1,13 @@
-<h2>Current version: 0.3</h2>
+<h2>Current version: 0.4</h2>
+Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.4.tar.gz">PyAlgoTrade-0.4.tar.gz</a>
+<ul>
+  <li>Added rate of change technical indicator.</li>
+  <li>Added stochastic oscillator technical indicator.</li>
+  <li>Added error checking to yahoofinance.get_daily_csv.</li>
+  <li>Normalized some method names in StrategyPlotter.</li>
+</ul>
+
+<h2>Version: 0.3</h2>
 Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.3.tar.gz">PyAlgoTrade-0.3.tar.gz</a>
 <ul>
   <li>Support for plotting strategies (StrategyPlotter).</li>
