--- a/www/PyAlgoTrade.rwsw/Pages/2-Downloads/Data/Contents.html
+++ b/www/PyAlgoTrade.rwsw/Pages/2-Downloads/Data/Contents.html
@@ -1,5 +1,5 @@
 <h2>Current version: 0.4</h2>
-Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.4.tar.gz">PyAlgoTrade-0.4.tar.gz</a>
+Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.4.tar.gz">PyAlgoTrade-0.4.tar.gz</a>
 <ul>
   <li>Added rate of change technical indicator.</li>
   <li>Added stochastic oscillator technical indicator.</li>
@@ -8,13 +8,13 @@ Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrad
 </ul>
 
 <h2>Version: 0.3</h2>
-Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.3.tar.gz">PyAlgoTrade-0.3.tar.gz</a>
+Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.3.tar.gz">PyAlgoTrade-0.3.tar.gz</a>
 <ul>
   <li>Support for plotting strategies (StrategyPlotter).</li>
 </ul>
 
 <h2>Version 0.2</h2>
-Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.2.tar.gz">PyAlgoTrade-0.2.tar.gz</a>
+Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.2.tar.gz">PyAlgoTrade-0.2.tar.gz</a>
 <ul>
   <li>Added CrossAbove and CrossBelow technical indicators.</li>
   <li>Added support for limit orders.</li>
@@ -22,4 +22,4 @@ Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrad
 </ul>
 
 <h2>Version 0.1</h2>
-Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.1.tar.gz">PyAlgoTrade-0.1.tar.gz</a>
+Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.1.tar.gz">PyAlgoTrade-0.1.tar.gz</a>
