Updated download urls.

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -72,7 +72,7 @@
 		<div id="contentContainer">
 			<div id="content">
 				<h2>Current version: 0.4</h2>
-Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.4.tar.gz">PyAlgoTrade-0.4.tar.gz</a>
+Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.4.tar.gz">PyAlgoTrade-0.4.tar.gz</a>
 <ul>
   <li>Added rate of change technical indicator.</li>
   <li>Added stochastic oscillator technical indicator.</li>
@@ -81,13 +81,13 @@ Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrad
 </ul>
 
 <h2>Version: 0.3</h2>
-Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.3.tar.gz">PyAlgoTrade-0.3.tar.gz</a>
+Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.3.tar.gz">PyAlgoTrade-0.3.tar.gz</a>
 <ul>
   <li>Support for plotting strategies (StrategyPlotter).</li>
 </ul>
 
 <h2>Version 0.2</h2>
-Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.2.tar.gz">PyAlgoTrade-0.2.tar.gz</a>
+Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.2.tar.gz">PyAlgoTrade-0.2.tar.gz</a>
 <ul>
   <li>Added CrossAbove and CrossBelow technical indicators.</li>
   <li>Added support for limit orders.</li>
@@ -95,7 +95,8 @@ Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrad
 </ul>
 
 <h2>Version 0.1</h2>
-Download here: <a href="http://gbeced.github.com/pyalgotrade/releases/PyAlgoTrade-0.1.tar.gz">PyAlgoTrade-0.1.tar.gz</a>
+Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.1.tar.gz">PyAlgoTrade-0.1.tar.gz</a>
+
 			</div>
 			<div class="clearer"></div>
 			<div id="breadcrumbcontainer"></div>
