Updated for version 0.5.

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -71,7 +71,16 @@
 		
 		<div id="contentContainer">
 			<div id="content">
-				<h2>Current version: 0.4</h2>
+				<h2>Current version: 0.5</h2>
+Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.5.tar.gz">PyAlgoTrade-0.5.tar.gz</a>
+<ul>
+  <li>Added support for optimizing strategies inside <b>Google App Engine</b>.</li>
+  <li>StrategyPlotter supports plotting a range.</li>
+  <li>Stochastic oscillator supports using adjusted values.</li>
+  <li>Improved optimizer module to distribute strategy executions in chunks.</li>
+</ul>
+
+<h2>Version 0.4</h2>
 Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.4.tar.gz">PyAlgoTrade-0.4.tar.gz</a>
 <ul>
   <li>Added rate of change technical indicator.</li>
@@ -80,7 +89,7 @@ Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTr
   <li>Normalized some method names in StrategyPlotter.</li>
 </ul>
 
-<h2>Version: 0.3</h2>
+<h2>Version 0.3</h2>
 Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.3.tar.gz">PyAlgoTrade-0.3.tar.gz</a>
 <ul>
   <li>Support for plotting strategies (StrategyPlotter).</li>
