--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@ PyAlgoTrade is <b>Python</b> library for <b>backtesting</b> stock trading strate
 The two main goals are:
 <ul>
   <li>To make it easy to write and backtest a strategy with historical data.</li>
-  <li>To make it easy to scale horizontally, that is, using one or more computers to backtest a strategy.</li>
+  <li>To make it easy to scale horizontally, that is, using one or more computers to backtest a strategy. You can now take advantage of Google's <b>cloud computing</b> infrastructure and run your strategies inside <b>Google App Engine</b>.</li>
 </ul>
 </p>
 
 <p>
-The best way to get an idea of what is this about, is to take a look at the <a href="http://gbeced.github.com/pyalgotrade/docs/v0.4/html/tutorial.html">tutorial</a>.
-The complete documentation is located <a href="http://gbeced.github.com/pyalgotrade/docs/v0.4/html/index.html">here</a>.
+The best way to get an idea of what is this about, is to take a look at the <a href="http://gbeced.github.com/pyalgotrade/docs/v0.5/html/tutorial.html">tutorial</a>.
+The complete documentation is located <a href="http://gbeced.github.com/pyalgotrade/docs/v0.5/html/index.html">here</a>.
 </p>
 
 <br />
