--- a/downloads/index.html
+++ b/downloads/index.html
@@ -65,6 +65,10 @@
 				<h1 class="sideHeader"></h1>
 				<!-- Plus One Button -->
 <g:plusone size="medium"></g:plusone>
+<br />
+<!-- Twitter -->
+<a href="https://twitter.com/pyalgotrade" class="twitter-follow-button" data-show-count="false">Follow @pyalgotrade</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 				
 			</div>
 		</div>
