--- a/downloads/index.html
+++ b/downloads/index.html
@@ -53,7 +53,7 @@
 			<h1>PyAlgoTrade</h1>
 			<h2>Python Algorithmic Trading Library</h2>
 		</div>
-		<div id="navcontainer"><ul><li><a href="../index.html" rel="self">Home</a></li><li><a href="index.html" rel="self" id="current">Downloads</a></li><li><a href="../contact/index.html" rel="self">Contact</a></li></ul></div>
+		<div id="navcontainer"><ul><li><a href="../" rel="self">Home</a></li><li><a href="./" rel="self" id="current">Downloads</a></li><li><a href="../contact/" rel="self">Contact</a></li></ul></div>
 	</div>
 	<div id="headerBottomGrad">
 		<img src="../rw_common/themes/realmacsoftware06/images/bottom_grad.png" alt="" style="width: 3000px; height: 12px;" />
