--- a/www/PyAlgoTrade.rwsw/Pages/2-Downloads/Data/Contents.html
+++ b/www/PyAlgoTrade.rwsw/Pages/2-Downloads/Data/Contents.html
@@ -1,4 +1,18 @@
-<h2>Current version: 0.6</h2>
+<h2>Current version: 0.7</h2>
+Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.7.tar.gz">PyAlgoTrade-0.7.tar.gz</a>
+<ul>
+  <li>Backtesting broker now allows customizing of order filling strategies..</li>
+  <li>Added support Stop orders. Thanks Tibor Kiss for adding this.</li>
+  <li>Added support StopLimit orders. Thanks Tibor Kiss for adding this.</li>
+  <li>TA-Lib integration (pyalgotrade.talibext.indicator).</li>
+  <li>Official support for NinjaTrader generated CSV files (pyalgotrade.barfeed.ninjatraderfeed.Feed). csvfeed.NinjaTraderRowParser was removed.</li>
+  <li>pyalgotrade.barfeed.csvfeed.YahooFeed was moved to pyalgotrade.barfeed.yahoofeed.Feed. pyalgotrade.barfeed.csvfeed.YahooFeed still works but it will be removed soon.</li>
+  <li>Major changes to the broker interface to support other broker types. These changes are not backwards compatible. Thanks Tibor Kiss for adding this.</li>
+  <li>Bug fix: Was not honoring the good till canceled attribute when submiting exit orders from inside the position classes.</li>
+  <li>Bug fix: Was not getting better prices (when available) for Limit orders. Thanks Tibor Kiss for reporting this.</li>
+</ul>
+
+<h2>Version 0.6</h2>
 Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.6.tar.gz">PyAlgoTrade-0.6.tar.gz</a>
 <ul>
   <li>Added initial support for NinjaTrader export format (csvfeed.NinjaTraderRowParser).</li>
