--- a/downloads/index.html
+++ b/downloads/index.html
@@ -75,7 +75,7 @@
 		
 		<div id="contentContainer">
 			<div id="content">
-				<h2>Current version: 0.7</h2>
+				<h2>Current version: 0.7 (22/Aug/2012)</h2>
 Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.7.tar.gz">PyAlgoTrade-0.7.tar.gz</a>
 <ul>
   <li>Backtesting broker now allows customizing of order filling strategies..</li>
@@ -89,7 +89,7 @@ Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTr
   <li>Bug fix: Was not getting better prices (when available) for Limit orders. Thanks Tibor Kiss for reporting this.</li>
 </ul>
 
-<h2>Version 0.6</h2>
+<h2>Version 0.6 (26/Jun/2012)</h2>
 Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.6.tar.gz">PyAlgoTrade-0.6.tar.gz</a>
 <ul>
   <li>Added initial support for NinjaTrader export format (csvfeed.NinjaTraderRowParser).</li>
@@ -99,7 +99,7 @@ Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTr
   <li>Fixes to plotter.py. The marker style used was not supported in some matplotlib versions. Thanks Tibor Kiss for fixing this.</li>
 </ul>
 
-<h2>Version 0.5</h2>
+<h2>Version 0.5 (21/Jun/2012)</h2>
 Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.5.tar.gz">PyAlgoTrade-0.5.tar.gz</a>
 <ul>
   <li>Added support for optimizing strategies inside <b>Google App Engine</b>.</li>
@@ -108,7 +108,7 @@ Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTr
   <li>Improved optimizer module to distribute strategy executions in chunks.</li>
 </ul>
 
-<h2>Version 0.4</h2>
+<h2>Version 0.4 (8/May/2012)</h2>
 Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.4.tar.gz">PyAlgoTrade-0.4.tar.gz</a>
 <ul>
   <li>Added rate of change technical indicator.</li>
@@ -117,13 +117,13 @@ Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTr
   <li>Normalized some method names in StrategyPlotter.</li>
 </ul>
 
-<h2>Version 0.3</h2>
+<h2>Version 0.3 (22/Apr/2012)</h2>
 Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.3.tar.gz">PyAlgoTrade-0.3.tar.gz</a>
 <ul>
   <li>Support for plotting strategies (StrategyPlotter).</li>
 </ul>
 
-<h2>Version 0.2</h2>
+<h2>Version 0.2 (14/Apr/2012)</h2>
 Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.2.tar.gz">PyAlgoTrade-0.2.tar.gz</a>
 <ul>
   <li>Added CrossAbove and CrossBelow technical indicators.</li>
@@ -131,7 +131,7 @@ Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTr
   <li>Fixed a bug when a position was set to exit on session close but the entry order was not filled.</li>
 </ul>
 
-<h2>Version 0.1</h2>
+<h2>Version 0.1 (27/Mar/2012)</h2>
 Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.1.tar.gz">PyAlgoTrade-0.1.tar.gz</a>
 
 			</div>
