--- a/downloads/index.html
+++ b/downloads/index.html
@@ -75,10 +75,19 @@
 		
 		<div id="contentContainer">
 			<div id="content">
-				<h2>Current version: 0.7 (22/Aug/2012)</h2>
+				<h2>Current version: 0.8 (28/Aug/2012)</h2>
+Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.8.tar.gz">PyAlgoTrade-0.8.tar.gz</a>
+<ul>
+  <li>StrategyPlotter now plots each instrument in a separate subplot. getMainSubplot was replaced by getIntrumentSubplot.</li>
+  <li>Strategy.exitPosition allows setting the exit order as GTC or not, or matching the entry order (default).</li>
+  <li>Bug fix: Was hitting an AssertionError in the strategy class when overwritting exit orders with new ones.</li>
+  <li>Bug fix: Set exit-on-session-close orders as GTC.</li>
+</ul>
+
+<h2>Version 0.7 (22/Aug/2012)</h2>
 Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.7.tar.gz">PyAlgoTrade-0.7.tar.gz</a>
 <ul>
-  <li>Backtesting broker now allows customizing of order filling strategies..</li>
+  <li>Backtesting broker now allows customizing of order filling strategies.</li>
   <li>Added support Stop orders. Thanks Tibor Kiss for adding this.</li>
   <li>Added support StopLimit orders. Thanks Tibor Kiss for adding this.</li>
   <li>TA-Lib integration (pyalgotrade.talibext.indicator).</li>
