--- a/www/PyAlgoTrade.rwsw/Pages/1-Home/Data/Contents.html
+++ b/www/PyAlgoTrade.rwsw/Pages/1-Home/Data/Contents.html
@@ -1,5 +1,5 @@
 <p>
-PyAlgoTrade is <b>Python</b> library for <b>backtesting</b> stock trading strategies. 
+PyAlgoTrade is a <b>Python</b> library for <b>backtesting</b> stock trading strategies. 
 </p>
 
 <p>
