--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<div id="contentContainer">
 			<div id="content">
 				<p>
-PyAlgoTrade is <b>Python</b> library for <b>backtesting</b> stock trading strategies. 
+PyAlgoTrade is a <b>Python</b> library for <b>backtesting</b> stock trading strategies. 
 </p>
 
 <p>
