--- a/downloads/index.html
+++ b/downloads/index.html
@@ -75,7 +75,15 @@
 		
 		<div id="contentContainer">
 			<div id="content">
-				<h2>Current version: 0.8 (28/Aug/2012)</h2>
+				<h2>Current version: 0.9 (1/Sep/2012)</h2>
+Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.9.tar.gz">PyAlgoTrade-0.9.tar.gz</a>
+<ul>
+  <li>Added a method to the strategy class to get notified when an order gets updated (onOrderUpdated). This is only called if the order was placed using the broker interface directly.</li>
+  <li>Bug fix: A KeyError exception was raised in the strategy class when placing orders using the broker interface directly. Thanks 'Femto Trader' for reporting this.</li>
+</ul>
+
+
+<h2>Version 0.8 (28/Aug/2012)</h2>
 Download here: <a href="https://github.com/downloads/gbeced/pyalgotrade/PyAlgoTrade-0.8.tar.gz">PyAlgoTrade-0.8.tar.gz</a>
 <ul>
   <li>StrategyPlotter now plots each instrument in a separate subplot. getMainSubplot was replaced by getIntrumentSubplot.</li>
