--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
 <!-- Twitter -->
 <a href="https://twitter.com/pyalgotrade" class="twitter-follow-button" data-show-count="false">Follow @pyalgotrade</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<br />
+<!-- Ohloh -->
+<script type="text/javascript" src="http://www.ohloh.net/p/616491/widgets/project_thin_badge.js"></script>
+
 				
 			</div>
 		</div>
@@ -81,16 +85,21 @@ PyAlgoTrade is a <b>Python</b> library for <b>backtesting</b> stock trading stra
 </p>
 
 <p>
-The two main goals are:
+Main features:
 <ul>
-  <li>To make it easy to write and backtest a strategy with historical data.</li>
-  <li>To make it easy to scale horizontally, that is, using one or more computers to backtest a strategy. You can now take advantage of Google's <b>cloud computing</b> infrastructure and run your strategies inside <b>Google App Engine</b>.</li>
+  <li>Support for Market, Limit, Stop and StopLimit orders.</li>
+  <li>Support for Yahoo! Finance CSV files.</li>
+  <li>Support for NinjaTrader CSV files.</li>
+  <li>Sharpe ratio analysis.</li>
+  <li>Max. drawdown and max. drawdown duration analysis.</li>
+  <li>Very easy to scale horizontally, that is, using one or more computers to backtest a strategy. You can even take advantage of Google's <b>cloud computing</b> infrastructure to run your strategies inside <b>Google App Engine</b>.</li>
+  <li>TA-Lib integration.</li>
 </ul>
 </p>
 
 <p>
-The best way to get an idea of what is this about, is to take a look at the <a href="http://gbeced.github.com/pyalgotrade/docs/v0.9/html/tutorial.html">tutorial</a>.
-The complete documentation is located <a href="http://gbeced.github.com/pyalgotrade/docs/v0.9/html/index.html">here</a>.
+The best way to get an idea of what is this about, is to take a look at the <a href="http://gbeced.github.com/pyalgotrade/docs/v0.10/html/tutorial.html">tutorial</a>.
+The complete documentation is located <a href="http://gbeced.github.com/pyalgotrade/docs/v0.10/html/index.html">here</a>.
 </p>
 
 <br />
@@ -103,7 +112,7 @@ It is also very easy to get a plot of the strategy execution. It only takes 3 li
 <br />
 
 <p>
-PyAlgoTrade is a free, open source, and it is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.
+PyAlgoTrade is free, open source, and it is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.
 </p>
 
 			</div>
