Added Google Plus One button.

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 		 })();
 	 </script>
 
-	<!-- Plus One Button -->
+	<!-- Google Plus One Button -->
 	<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 </head>
 
@@ -161,19 +161,27 @@
 		<div class="bs-docs-social">
 			<div class="container">
 				<ul class="bs-docs-social-buttons">
+					<!-- GitHub Star -->
 					<li>
 					<iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=gbeced&repo=pyalgotrade&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
 					</li>
+					<!-- GitHub Fork -->
 					<li>
 					<iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=gbeced&repo=pyalgotrade&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
 					</li>
+					<!-- Twitter Follow -->
 					<li>
 					<a href="https://twitter.com/pyalgotrade" class="twitter-follow-button" data-show-count="false">Follow @pyalgotrade</a>
 					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 					</li>
+					<!-- Twitter Share -->
 					<li>
 					<a href="https://twitter.com/share" class="twitter-share-button" data-via="pyalgotrade" data-count="none">Tweet</a>
 					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+					</li>
+					<!-- Google Plus One Button -->
+					<li>
+					<g:plusone size="medium"></g:plusone>
 					</li>
 				</ul>
 			</div>
