Added link to Bollinger Bands example.

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -109,7 +109,7 @@
 			<li>StrategyPlotter now allows plotting custom functions.</li>
 			<li>Optimizations in different areas.</li>
 			<li>Standard deviation technical indicator (pyalgotrade.technical.stats.StdDev).</li>
-			<li>Bollinger Bands technical indicator (pyalgotrade.technical.bollinger.BollingerBands).</li>
+			<li>Bollinger Bands technical indicator (pyalgotrade.technical.bollinger.BollingerBands). Example <a href="http://gbeced.github.io/pyalgotrade/docs/v0.12/html/sample_bbands.html">here</a>.</li>
 			<li>Fixed a bug in EMA technical that could lead to max. recursion limit error.</li>
 			<li>Fixed a bug in the Strategy class that had a big impact on execution time. Bookkeeping for active positions and orders was not handled properly.</li>
 		</ul>
