--- a/contact/index.html
+++ b/contact/index.html
@@ -102,10 +102,8 @@
 		</div>
 
 		<p>
-		If you have any comment, suggestion, or bug to report, please don't hesitate and send me an email to <a href="mailto:pyalgotrade@gmail.com">pyalgotrade@gmail.com</a>.
-		</p>
-		<p>
-		There is also a <a href="http://groups.google.com/group/pyalgotrade">Google Group</a> you can use to participate in online discussions.
+		If you have any comment, suggestion, or bug to report, please don't hesitate and send me an email to <a href="mailto:pyalgotrade@gmail.com">pyalgotrade@gmail.com</a>,
+		or you can also use the following <a href="http://groups.google.com/group/pyalgotrade">Google Group</a> so other can benefit as well.
 		</p>
 
 		<hr>
