--- a/contact/index.html
+++ b/contact/index.html
@@ -103,7 +103,7 @@
 
 		<p>
 		If you have any comment, suggestion, or bug to report, please don't hesitate and send me an email to <a href="mailto:pyalgotrade@gmail.com">pyalgotrade@gmail.com</a>,
-		or you can also use the following <a href="http://groups.google.com/group/pyalgotrade">Google Group</a> so other can benefit as well.
+		or you can also use the following <a href="http://groups.google.com/group/pyalgotrade">Google Group</a> so others can benefit as well.
 		</p>
 
 		<hr>
