--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			PyAlgoTrade is a <b>Python</b> library for <b>backtesting</b> stock trading strategies.
 			Let’s say you have an idea for a trading strategy and you’d like to evaluate it with historical data and see how it behaves. PyAlgoTrade allows you to do so with minimal effort.
 			</p>
-			<a class="btn btn-large btn-success" href="http://gbeced.github.com/pyalgotrade/docs/v0.12/html/tutorial.html">Quickstart</a>
+			<a class="btn btn-large btn-success" href="http://gbeced.github.com/pyalgotrade/docs/v0.13/html/tutorial.html">Quickstart</a>
 		</div>
 
 		<div class="bs-docs-social">
@@ -192,13 +192,15 @@
 			<div class="span4">
 				<h2>Main features</h2>
 				<ul>
-					<li><a href="http://gbeced.github.com/pyalgotrade/docs/v0.12/html/">Fully documented</a>.</li>
+					<li><a href="http://gbeced.github.com/pyalgotrade/docs/v0.13/html/">Fully documented</a>.</li>
 					<li>Support for Market, Limit, Stop and StopLimit orders.</li>
 					<li>Support for Yahoo! Finance and NinjaTrader CSV files.</li>
 					<li>Support for many technical indicators like Moving Averages, Momentum Indicators and others.</li>
 					<li>Sharpe ratio analysis.</li>
 					<li>Max. drawdown and max. drawdown duration analysis.</li>
 					<li>TA-Lib integration.</li>
+					<li>Bitcoin support through MtGox.</li>
+					<li>Handling Twitter events in realtime.</li>
 				</ul>
 			</div>
 			<div class="span4">
