Updated 'Main features' section.

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 					<li><a href="http://gbeced.github.com/pyalgotrade/docs/v0.13/html/">Fully documented</a>.</li>
 					<li>Support for Market, Limit, Stop and StopLimit orders.</li>
 					<li>Support for Yahoo! Finance and NinjaTrader CSV files.</li>
-					<li>Support for many technical indicators like Moving Averages, Momentum Indicators and others.</li>
+					<li>Technical indicators and filters like SMA, WMA, EMA, RSI, Bollinger Bands and many more.</li>
 					<li>Sharpe ratio analysis.</li>
 					<li>Max. drawdown and max. drawdown duration analysis.</li>
 					<li>TA-Lib integration.</li>
