--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 					</li>
 					<!-- Twitter Follow -->
 					<li>
-					<a href="https://twitter.com/pyalgotrade" class="twitter-follow-button" data-show-count="false">Follow @pyalgotrade</a>
+					<a href="https://twitter.com/pyalgotrade" class="twitter-follow-button" data-show-count="true">Follow @pyalgotrade</a>
 					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 					</li>
 					<!-- Twitter Share -->
