Removed MtGox and added Bitstamp.

--- a/index.html
+++ b/index.html
@@ -193,11 +193,12 @@
 				<h2>Main features</h2>
 				<ul>
 					<li><a href="http://gbeced.github.com/pyalgotrade/docs/v0.14/html/">Fully documented</a>.</li>
+					<li>Event driven backtester.</li>
 					<li>Support for Market, Limit, Stop and StopLimit orders.</li>
 					<li>Support for Yahoo! Finance and NinjaTrader CSV files.</li>
 					<li>Technical indicators and filters like SMA, WMA, EMA, RSI, Bollinger Bands and many more.</li>
 					<li>Strategy metrics like Sharpe ratio and drawdown analysis.</li>
-					<li>Bitcoin support through MtGox.</li>
+					<li>Bitcoin support through Bitstamp.</li>
 					<li>Handling Twitter events in realtime.</li>
 					<li>Event profiler.</li>
 					<li>Support for any type of time-series data in CSV format, for example <a href="http://www.quandl.com/">Quandl</a>.</li>
