--- a/index.html
+++ b/index.html
@@ -1,235 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Python Algorithmic Trading Library">
+    <meta name="keywords" content="Algorithmic Trading, Backtesting, Python, Stock Trading, Event Driven Backtester, Papertrading" />
+    <meta name="author" content="Gabriel Becedillas">
+    <!-- <link rel="shortcut icon" href="../../assets/ico/favicon.ico"> -->
 
-<head>
-	<meta charset="utf-8">
-	<title>PyAlgoTrade - Home</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Python Algorithmic Trading Library" />
-	<meta name="keywords" content="Algorithmic Trading, Backtesting, Python, Stock Trading, Event Driven Backtester, Papertrading" />
+    <title>PyAlgoTrade - Home</title>
 
-	<!-- Le styles -->
-	<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-	<style type="text/css">
-		body {
-			padding-top: 20px;
-			padding-bottom: 60px;
-		}
+    <!-- Bootstrap core CSS -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-		/* Custom container */
-		.container {
-			margin: 0 auto;
-			max-width: 1000px;
-		}
-		.container > hr {
-			margin: 60px 0;
-		}
+    <!-- Custom styles for this page -->
+	<link href="css/navbar-fixed-top.css" rel="stylesheet">
+    <link href="css/home.css" rel="stylesheet">
 
-		/* Main marketing message and sign up button */
-		.jumbotron {
-			margin: 80px 0;
-			text-align: center;
-		}
-		.jumbotron h1 {
-			font-size: 80px;
-			line-height: 1;
-		}
-		.jumbotron .lead {
-			font-size: 24px;
-			line-height: 1.25;
-		}
-		.jumbotron .btn {
-			font-size: 21px;
-			padding: 14px 24px;
-		}
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
 
-		/* Customize the navbar links to be fill the entire space of the .navbar */
-		.navbar .navbar-inner {
-			padding: 0;
-		}
-		.navbar .nav {
-			margin: 0;
-			display: table;
-			width: 100%;
-		}
-		.navbar .nav li {
-			display: table-cell;
-			width: 1%;
-			float: none;
-		}
-		.navbar .nav li a {
-			font-weight: bold;
-			text-align: center;
-			border-left: 1px solid rgba(255,255,255,.75);
-			border-right: 1px solid rgba(0,0,0,.1);
-		}
-		.navbar .nav li:first-child a {
-			border-left: 0;
-			border-radius: 3px 0 0 3px;
-		}
-		.navbar .nav li:last-child a {
-			border-right: 0;
-			border-radius: 0 3px 3px 0;
-		}
+  <body>
+    <!-- Fixed navbar -->
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">PyAlgoTrade</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+			<li class="active"><a href="#">Home</a></li>
+			<li><a href="docs/">Documentation</a></li>
+			<li><a href="downloads/">Downloads</a></li>
+			<li><a href="contact/">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
 
-		/* Social proof buttons from GitHub & Twitter */
-		.bs-docs-social {
-			margin: 80px 0;
-			padding: 15px 0;
-			text-align: center;
-			background-color: #f5f5f5;
-			border-top: 1px solid #ddd;
-			border-bottom: 1px solid #ddd;
-		}
+    <div class="container">
 
-		/* Quick links on Home */
-		.bs-docs-social-buttons {
-			margin-left: 0;
-			margin-bottom: 0;
-			padding-left: 0;
-			list-style: none;
-		}
-		.bs-docs-social-buttons li {
-			display: inline-block;
-			padding: 5px 8px;
-			line-height: 1;
-			*display: inline;
-			*zoom: 1;
-		}
-	</style>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+      <!-- Jumbotron -->
+      <div class="jumbotron">
+        <h1>Python Algorithmic Trading Library</h1>
+        <p>
+        PyAlgoTrade is a <b>Python</b> library for <b>backtesting</b> stock trading strategies.
+        Let’s say you have an idea for a trading strategy and you’d like to evaluate it with historical data and see how it behaves. PyAlgoTrade allows you to do so with minimal effort.
+        </p>
+        <p><a class="btn btn-lg btn-success" href="http://gbeced.github.com/pyalgotrade/docs/v0.15/html/tutorial.html" role="button">Quickstart</a></p>
+      </div>
 
-	<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-	<!--[if lt IE 9]>
-	<script src="bootstrap/js/html5shiv.js"></script>
-	<![endif]-->
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-lg-4">
+            <h2>Main features</h2>
+            <ul>
+                <li><a href="http://gbeced.github.com/pyalgotrade/docs/v0.15/html/">Fully documented</a>.</li>
+                <li>Event driven.</li>
+                <li>Supports Market, Limit, Stop and StopLimit orders.</li>
+                <li>Supports Yahoo! Finance and NinjaTrader CSV files.</li>
+                <li>Supports any type of time-series data in CSV format, for example <a href="http://www.quandl.com/">Quandl</a>.</li>
+                <li><a href="https://www.xignite.com/">Xignite</a> realtime feed.</li>
+				<li>Bitcoin support through <a href="https://www.bitstamp.net/">Bitstamp</a>.</li>
+                <li>Technical indicators and filters like SMA, WMA, EMA, RSI, Bollinger Bands and many more.</li>
+                <li>Strategy metrics like Sharpe ratio and drawdown analysis.</li>
+                <li>Handling Twitter events in realtime.</li>
+                <li>Event profiler.</li>
+                <li>TA-Lib integration.</li>
+            </ul>
+        </div>
+        <div class="col-lg-4">
+            <h2>Scalable</h2>
+            <p>
+            Very easy to scale horizontally, that is, using one or more computers to backtest a strategy.<br/>
+            </p>
+            <p>
+            You can even take advantage of Google's <b>cloud computing</b> infrastructure to run your strategies inside <b>Google App Engine</b>.
+            </p>
+       </div>
+        <div class="col-lg-4">
+            <h2>Free</h2>
+            <p>
+            PyAlgoTrade is free, open source, and it is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.
+            </p>
+        </div>
+      </div>
 
-	<!-- Fav and touch icons -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="bootstrap/ico/apple-touch-icon-144-precomposed.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="bootstrap/ico/apple-touch-icon-114-precomposed.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="bootstrap/ico/apple-touch-icon-72-precomposed.png">
-	<link rel="apple-touch-icon-precomposed" href="bootstrap/ico/apple-touch-icon-57-precomposed.png">
-	<link rel="shortcut icon" href="bootstrap/ico/favicon.png">
+    </div> <!-- /container -->
 
-	<!-- Google analytics -->
-	<script type="text/javascript">
-		var _gaq = _gaq || [];
-		_gaq.push(['_setAccount', 'UA-1180709-11']);
-		_gaq.push(['_trackPageview']);
-
-		(function() {
-		 var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		 ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		 var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		 })();
-	 </script>
-
-	<!-- Google Plus One Button -->
-	<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
-</head>
-
-<body>
-	<div class="container">
-
-		<div class="masthead">
-			<h3 class="muted">PyAlgoTrade</h3>
-			<div class="navbar">
-				<div class="navbar-inner">
-					<div class="container">
-						<ul class="nav">
-							<li class="active"><a href="#">Home</a></li>
-							<li><a href="docs/">Documentation</a></li>
-							<li><a href="downloads/">Downloads</a></li>
-							<li><a href="contact/">Contact</a></li>
-						</ul>
-					</div>
+	<!-- Site footer -->
+    <div class="footer">
+		<div class="footer-row">
+			<div class="bs-docs-social">
+				<div class="container">
+					<ul class="bs-docs-social-buttons">
+						<!-- GitHub Star -->
+						<li>
+						<iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=gbeced&repo=pyalgotrade&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
+						</li>
+						<!-- GitHub Fork -->
+						<li>
+						<iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=gbeced&repo=pyalgotrade&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
+						</li>
+						<!-- Twitter Follow -->
+						<li>
+						<a href="https://twitter.com/pyalgotrade" class="twitter-follow-button" data-show-count="true">Follow @pyalgotrade</a>
+						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+						</li>
+						<!-- Twitter Share -->
+						<li>
+						<a href="https://twitter.com/share" class="twitter-share-button" data-via="pyalgotrade">Tweet</a>
+						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+						</li>
+						<!-- Google Plus One Button -->
+						<li>
+						<g:plusone size="medium"></g:plusone>
+						</li>
+					</ul>
 				</div>
-			</div><!-- /.navbar -->
+			</div>
 		</div>
-
-		<!-- Jumbotron -->
-		<div class="jumbotron">
-			<h1>Python Algorithmic Trading Library</h1>
-			<p class="lead">
-			PyAlgoTrade is a <b>Python</b> library for <b>backtesting</b> stock trading strategies.
-			Let’s say you have an idea for a trading strategy and you’d like to evaluate it with historical data and see how it behaves. PyAlgoTrade allows you to do so with minimal effort.
-			</p>
-			<a class="btn btn-large btn-success" href="http://gbeced.github.com/pyalgotrade/docs/v0.15/html/tutorial.html">Quickstart</a>
-		</div>
-
-		<div class="bs-docs-social">
+		<div class="footer-row">
 			<div class="container">
-				<ul class="bs-docs-social-buttons">
-					<!-- GitHub Star -->
-					<li>
-					<iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=gbeced&repo=pyalgotrade&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
-					</li>
-					<!-- GitHub Fork -->
-					<li>
-					<iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=gbeced&repo=pyalgotrade&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
-					</li>
-					<!-- Twitter Follow -->
-					<li>
-					<a href="https://twitter.com/pyalgotrade" class="twitter-follow-button" data-show-count="true">Follow @pyalgotrade</a>
-					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-					</li>
-					<!-- Twitter Share -->
-					<li>
-					<a href="https://twitter.com/share" class="twitter-share-button" data-via="pyalgotrade">Tweet</a>
-					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-					</li>
-					<!-- Google Plus One Button -->
-					<li>
-					<g:plusone size="medium"></g:plusone>
-					</li>
-				</ul>
+				<p class="text-muted">&copy; Gabriel Becedillas 2011-2014.</p>
 			</div>
 		</div>
+	</div>
 
-		<!-- Example row of columns -->
-		<div class="row-fluid">
-			<div class="span4">
-				<h2>Main features</h2>
-				<ul>
-					<li><a href="http://gbeced.github.com/pyalgotrade/docs/v0.15/html/">Fully documented</a>.</li>
-					<li>Event driven.</li>
-					<li>Supports Market, Limit, Stop and StopLimit orders.</li>
-					<li>Supports Yahoo! Finance and NinjaTrader CSV files.</li>
-					<li>Supports any type of time-series data in CSV format, for example <a href="http://www.quandl.com/">Quandl</a>.</li>
-					<li><a href="https://www.xignite.com/">Xignite</a> realtime feed.</li>
-					<li>Bitcoin support through <a href="https://www.bitstamp.net/">Bitstamp</a>.</li>
-					<li>Technical indicators and filters like SMA, WMA, EMA, RSI, Bollinger Bands and many more.</li>
-					<li>Strategy metrics like Sharpe ratio and drawdown analysis.</li>
-					<li>Handling Twitter events in realtime.</li>
-					<li>Event profiler.</li>
-					<li>TA-Lib integration.</li>
-				</ul>
-			</div>
-			<div class="span4">
-				<h2>Scalable</h2>
-				<p>
-				Very easy to scale horizontally, that is, using one or more computers to backtest a strategy.<br/>
-				</p>
-				<p>
-				You can even take advantage of Google's <b>cloud computing</b> infrastructure to run your strategies inside <b>Google App Engine</b>.
-				</p>
-			</div>
-			<div class="span4">
-				<h2>Free</h2>
-				<p>
-				PyAlgoTrade is free, open source, and it is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.
-				</p>
-			</div>
-		</div>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
 
-		<hr>
+    <!-- Google analytics -->
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-1180709-11']);
+        _gaq.push(['_trackPageview']);
 
-		<div class="footer">
-			<p>&copy; Gabriel Becedillas 2011-2014</p>
-		</div>
+        (function() {
+         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+         })();
+    </script>
 
-	</div> <!-- /container -->
-</body>
+    <!-- Google Plus One Button -->
+    <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+
+  </body>
 </html>
-
