--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 		</div>
 		<div class="footer-row">
 			<div class="container">
-				<p class="text-muted">&copy; Gabriel Becedillas 2011-2014.</p>
+				<p class="text-muted">&copy; Gabriel Becedillas 2011-2014</p>
 			</div>
 		</div>
 	</div>
