--- a/contact/index.html
+++ b/contact/index.html
@@ -59,7 +59,7 @@
     <div class="footer">
 		<div class="footer-row">
 			<div class="container">
-				<p class="text-muted">&copy; Gabriel Becedillas 2011-2014.</p>
+				<p class="text-muted">&copy; Gabriel Becedillas 2011-2014</p>
 			</div>
 		</div>
 	</div>
