Added gratipay button.

--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
 						<li>
 						<g:plusone size="medium"></g:plusone>
 						</li>
+						<!-- Gratipay Button -->
+						<li>
+						<script data-gratipay-username="gabriel.becedillas" data-gratipay-widget="button" src="//grtp.co/v1.js"></script>
+						</li>
 					</ul>
 				</div>
 			</div>
