Added Xapo Tip button.

--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
 						<li>
 						<g:plusone size="medium"></g:plusone>
 						</li>
+						<!-- Xapo Tip Button -->
+						<li>
+							<iframe id="tipButtonFrame" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:22px;" allowTransparency="true" src="https://mpayment.xapo.com/pay_button/show?customization=%7B%22button_text%22%3A%22Tip%22%7D&payload=%7B%22sender_user_id%22%3Anull%2C%22sender_user_email%22%3Anull%2C%22sender_user_cellphone%22%3Anull%2C%22receiver_user_id%22%3A%22gabriel.becedillas%40gmail.com%22%2C%22receiver_user_email%22%3A%22gabriel.becedillas%40gmail.com%22%2C%22pay_object_id%22%3A%22PyAlgoTrade%22%2C%22amount_BIT%22%3A10%2C%22timestamp%22%3A1417827593000%7D"></iframe>
+						</li>
 					</ul>
 				</div>
 			</div>
