Updated main features section.

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <li>Supports any type of time-series data in CSV format, for example <a href="http://www.quandl.com/">Quandl</a>.</li>
                 <li><a href="https://www.xignite.com/">Xignite</a> realtime feed.</li>
 				<li><b>Bitcoin trading</b> support through <a href="https://www.bitstamp.net/">Bitstamp</a>.</li>
-				<li><b>Technical indicators</b> and filters like SMA, WMA, EMA, RSI, Bollinger Bands and many more.</li>
-				<li>Strategy metrics like <b>Sharpe ratio</b> and drawdown analysis.</li>
+				<li><b>Technical indicators</b> and filters like SMA, WMA, EMA, RSI, Bollinger Bands and others.</li>
+				<li>Performance metrics like <b>Sharpe ratio</b> and drawdown analysis.</li>
                 <li>Handling Twitter events in realtime.</li>
                 <li>Event profiler.</li>
                 <li>TA-Lib integration.</li>
