--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <li><a href="http://gbeced.github.com/pyalgotrade/docs/v0.16/html/">Fully documented</a>.</li>
 				<li><b>Event driven</b>.</li>
                 <li>Supports Market, Limit, Stop and StopLimit orders.</li>
-                <li>Supports Yahoo! Finance and NinjaTrader CSV files.</li>
+                <li>Supports Yahoo! Finance, Google Finance and NinjaTrader CSV files.</li>
                 <li>Supports any type of time-series data in CSV format, for example <a href="http://www.quandl.com/">Quandl</a>.</li>
                 <li><a href="https://www.xignite.com/">Xignite</a> realtime feed.</li>
 				<li><b>Bitcoin trading</b> support through <a href="https://www.bitstamp.net/">Bitstamp</a>.</li>
