--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
 						<li>
 						<g:plusone size="medium"></g:plusone>
 						</li>
+						<!-- Change Tip Button -->
+						<li>
+						<div class="changetip_tipme_button" data-bid="99H8SLEqHS9A4SZqDxqPc" data-uid="4zr5c6o2UYJfHKgoXMU7vK"></div><script>(function(document,script,id){var js,r=document.getElementsByTagName(script)[0],protocol=/^http:/.test(document.location)?'http':'https';if(!document.getElementById(id)){js=document.createElement(script);js.id=id;js.src=protocol+'://widgets.changetip.com/public/js/widgets.js';r.parentNode.insertBefore(js,r)}}(document,'script','changetip_w_0'));</script>
+						</li>
 					</ul>
 				</div>
 			</div>
