Updated home page (gracias Panchito!).

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="jumbotron">
         <h1>Python Algorithmic Trading Library</h1>
         <p>
-		PyAlgoTrade is a Python Algorithmic Trading Library library with focus on <b>backtesting</b>
+		PyAlgoTrade is a Python Algorithmic Trading Library with focus on <b>backtesting</b>
 		and support for <b>paper-trading</b> and <b>live-trading</b>.
 		Let’s say you have an idea for a trading strategy and you’d like to evaluate it with historical
 		data and see how it behaves. PyAlgoTrade allows you to do so with minimal effort.
