--- a/downloads/index.html
+++ b/downloads/index.html
@@ -50,7 +50,31 @@
 
     <div class="container">
 
-		<h2>Current version: 0.18 (17/Aug/2016)</h2>
+		<h2>Current version: 0.20 (20/Aug/2018)</h2>
+		<h3>New features</h3>
+		<ul>
+				<li>Added support for Python 3.7.</li>
+				<li>Added setShares method for back-testing broker. Thanks winkidney for implementing this.</li>
+				<li>Added an option to support skipping errors while parsing CSV files.</li>
+				<li>Added batchSize parameter to optimizer component. Thanks micmicmichael for implementing this.</li>
+				<li>Added savePlot to the plotter to save the plot to a file. Thanks Kimble Young for implementing this.</li>
+		</ul>
+		<h3>Bug fixes</h3>
+		<ul>
+				<li>Fixed a bug in the Event class when unsubscribing and re-subscribing while emitting. Thanks pjz for reporting this.</li>
+				<li>Fixed a bug while generating nonces for Bitstamp. Thanks pjz for reporting this.</li>
+				<li>Fixed callback for BaseStrategy.resampleBarFeed to match onBars prototype.</li>
+				<li>Fixed extra columns parsing in csvfeed.GenericRowParser. Thanks Jones Chung for reporting this.</li>
+		</ul>
+		<h3>Breaking changes</h3>
+		<ul>
+				<li>Removed support for downloading bars from Yahoo Finance.</li>
+				<li>Removed support for downloading bars from Google Finance.</li>
+		</ul>
+
+		<hr>
+
+		<h2>Version 0.18 (17/Aug/2016)</h2>
 		Download here: <a href="http://sourceforge.net/projects/pyalgotrade/files/0.18/PyAlgoTrade-0.18.tar.gz/download">PyAlgoTrade-0.18.tar.gz</a>
 		<h3>New features</h3>
 		<ul>
@@ -76,8 +100,6 @@
 				<li>Removed Xignite support (http://www.xignite.com/).</li>
 				<li>Removed deprecated code that issued warnings in previous versions.</li>
 		</ul>
-
-		<hr>
 
 		<h2>Version 0.17 (10/May/2015)</h2>
 		Download here: <a href="http://sourceforge.net/projects/pyalgotrade/files/0.17/PyAlgoTrade-0.17.tar.gz/download">PyAlgoTrade-0.17.tar.gz</a>
