--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		Let’s say you have an idea for a trading strategy and you’d like to evaluate it with historical
 		data and see how it behaves. PyAlgoTrade allows you to do so with minimal effort.
         </p>
-        <p><a class="btn btn-lg btn-success" href="http://gbeced.github.com/pyalgotrade/docs/v0.20/html/tutorial.html" role="button">Quickstart</a></p>
+        <p><a class="btn btn-lg btn-success" href="http://gbeced.github.io/pyalgotrade/docs/v0.20/html/tutorial.html" role="button">Quickstart</a></p>
       </div>
 
       <!-- Example row of columns -->
@@ -68,7 +68,7 @@
         <div class="col-lg-4">
             <h2>Main features</h2>
             <ul>
-                <li><a href="http://gbeced.github.com/pyalgotrade/docs/v0.20/html/">Fully documented</a>.</li>
+                <li><a href="http://gbeced.github.io/pyalgotrade/docs/v0.20/html/">Fully documented</a>.</li>
 				<li><b>Event driven</b>.</li>
                 <li>Supports Python 2 and Python 3.</li>
                 <li>Supports Market, Limit, Stop and StopLimit orders.</li>
